Improve product finding
